# seal

./: .gitignore  Cargo.toml
.github/workflows/: docs-deploy.yml  move.yml
crates/crypto/src/: elgamal.rs
crates/key-server/: Cargo.toml
crates/key-server/src/: externals.rs  key_server_options.rs  lib.rs  master_keys.rs  metrics.rs  mvr.rs  periodic_updater.rs  seal_package.rs  server.rs  sui_rpc_client.rs  types.rs  utils.rs  valid_ptb.rs
crates/key-server/src/aggregator/: server.rs  utils.rs
crates/key-server/src/tests/: e2e.rs  externals.rs  mod.rs  server.rs  test_utils.rs
crates/key-server/tests/: server.rs
crates/seal-cli/src/: main.rs
crates/seal-committee-cli/src/: main.rs  types.rs
crates/seal-committee/src/: utils.rs
crates/seal-sdk/: Cargo.toml
crates/seal-sdk/src/: lib.rs  types.rs
crates/seal-sdk/src/client/: base_client.rs  cache.rs  cache_key.rs  client.rs  error.rs  generic_types.rs  http_client.rs  mod.rs  seal_client.rs  session_key.rs  signer.rs  sui_client.rs
crates/seal-sdk/src/client/native_sui_sdk/: mod.rs
crates/seal-sdk/src/client/native_sui_sdk/client/: seal_client.rs  sui_client.rs
crates/seal-sdk/src/client/native_sui_sdk/signer/: wallet_context.rs
crates/seal-sdk/src/client/reqwest/: client.rs
crates/seal-sdk/tests/: base_client.rs
docs/: KeyServerOps.md  UsingSeal.md
docs/content/: Aggregator.mdx  Design.mdx  GettingStarted.mdx  KeyServerCommitteeOps.mdx  KeyServerOps.mdx  Pricing.mdx  SecurityBestPractices.mdx  ServerOverview.mdx  TermsOfService.md  UsingSeal.mdx  index.mdx
docs/site/: sidebars.js
examples/frontend/: package.json  pnpm-lock.yaml
examples/frontend/src/: AllowlistView.tsx  EncryptAndUpload.tsx  SubscriptionView.tsx  networkConfig.ts  utils.ts
move/committee/sources/: committee.move
move/committee/tests/: committee_tests.move
move/seal/: Published.toml
move/seal/sources/: bf_hmac_encryption.move  kdf.move  polynomial.move
move/seal_testnet/sources/: key_server.move
tests/: package.json  pnpm-lock.yaml  simple-seal-server.test.ts
