[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.6.3"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d2e2d13be3e550745739144e2a090b9675e4ffcb", features = ["aes"] }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d2e2d13be3e550745739144e2a090b9675e4ffcb" }
bcs = "0.1.6"
serde = "1.0.210"
serde_json = "1.0.138"
itertools = "0.14.0"
anyhow = "1.0"
rand = "0.8.5"
hex = "0.4"
clap = { version = "4.5.40", features = ["derive"] }
tracing = "0.1.37"
serde_with = "3.13.0"
prost-types = "0.14"
tonic = "0.14"
semver = { version = "1.0.26", features = ["serde"] }
once_cell = "1.21.3"
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors", "limit"] }
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3"
reqwest = "0.12"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
prometheus = "0.13.4"
chrono = "0.4"
serde_yaml = "0.9"
snap = "1.1.0"
git-version = "0.3.9"

# Sui dependencies
sui_types = { git = "https://github.com/mystenlabs/sui", rev = "893c5d608a580e8c8529ec6c0aeab21c7dec0399", package = "sui-types"}
mysten-service = { git = "https://github.com/mystenlabs/sui", rev = "893c5d608a580e8c8529ec6c0aeab21c7dec0399" }
sui_sdk = { git = "https://github.com/mystenlabs/sui", rev = "893c5d608a580e8c8529ec6c0aeab21c7dec0399", package = "sui-sdk"}
shared_crypto = { git = "https://github.com/MystenLabs/sui", rev = "893c5d608a580e8c8529ec6c0aeab21c7dec0399", package = "shared-crypto" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "893c5d608a580e8c8529ec6c0aeab21c7dec0399" }
prometheus_closure_metric = { git = "https://github.com/MystenLabs/sui", rev = "893c5d608a580e8c8529ec6c0aeab21c7dec0399", package = "prometheus-closure-metric" }
sui-move-build = { git = "https://github.com/mystenlabs/sui", rev = "893c5d608a580e8c8529ec6c0aeab21c7dec0399", package = "sui-move-build" }
test-cluster = { git = "https://github.com/mystenlabs/sui", rev = "893c5d608a580e8c8529ec6c0aeab21c7dec0399", package = "test-cluster" }
move-package-alt-compilation = { git = "https://github.com/mystenlabs/sui", rev = "893c5d608a580e8c8529ec6c0aeab21c7dec0399", package = "move-package-alt-compilation" }
sui-package-alt = { git = "https://github.com/mystenlabs/sui", rev = "893c5d608a580e8c8529ec6c0aeab21c7dec0399", package = "sui-package-alt" }

sui_keys = { git = "https://github.com/mystenlabs/sui", rev = "893c5d608a580e8c8529ec6c0aeab21c7dec0399", package = "sui-keys" }
sui-sdk-types = { version = "0.2.0", features = ["serde"] }
sui-rpc = "0.2.0"

[profile.release]
panic = 'abort'
