[package]
name = "seal-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
anyhow = { workspace = true }
chrono = "0.4.39"
serde = { workspace = true }
serde_json = { workspace = true }
fastcrypto = { workspace = true }
futures = "0.3.31"
bcs = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1.46.1", features = ["full"] }
crypto = { path = "../crypto" }
sui_sdk = { workspace = true, optional = true }
sui_types = { workspace = true, optional = true }
sui_keys = { workspace = true, optional = true }
shared_crypto = { workspace = true }
sui-sdk-types = { workspace = true }
reqwest = { version = "0.11", optional = true }
http = { version = "0.2.12", optional = true }
hex = { workspace = true }
base64 = "0.22.1"
thiserror = "1.0.69"
rand = { workspace = true }
moka = { version = "0.12.11", features = ["future"], optional = true }

[features]
default = ["client", "native-tls", "native-sui-sdk"]
native-tls = ["reqwest/native-tls"]
client = ["reqwest", "http"]
moka-client = ["moka"]
native-sui-sdk = ["sui_sdk", "sui_types", "sui_keys"]